--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "wordcloud_js",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "coffee-script": "^1.12.4",
-    "d3": "^4.7.4",
-    "word-counter": "^1.0.8"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Canary-Analytics/wordcloud_js.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Canary-Analytics/wordcloud_js/issues"
-  },
-  "homepage": "https://github.com/Canary-Analytics/wordcloud_js#readme"
+    "name": "wordcloud_js",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "dependencies": {
+        "coffee-script": "^1.12.4",
+        "d3": "^4.7.4",
+        "word-counter": "^1.0.8",
+        "ejs": "^2.5.6",
+        "express": "^4.14.1"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Canary-Analytics/wordcloud_js.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Canary-Analytics/wordcloud_js/issues"
+    },
+    "homepage": "https://github.com/Canary-Analytics/wordcloud_js#readme"
 }
